import { createLogger, logger } from '../src';
import { join } from 'path';

const root = join(__dirname, '..');

expect.addSnapshotSerializer({
  test: val => typeof val === 'string' && val.includes(root),
  print: val => {
    return (val as any).toString().replaceAll(root, '<ROOT>');
  },
});

describe('logger', () => {
  test('should log as expected', () => {
    console.log = jest.fn();

    logger.greet(`😊 Rslog v1.0.0\n`);
    logger.log('this is a log message');
    logger.info('this is an info message');
    logger.warn('this is a warn message');
    logger.ready('this is a ready message');
    logger.debug('this is a debug message');
    logger.success('this is a success message');

    expect((console.log as jest.Mock).mock.calls).toMatchSnapshot();
  });

  test('should create new logger with info level correctly', () => {
    console.log = jest.fn();

    const logger = createLogger({
      level: 'info',
    });

    logger.greet(`😊 Rslog v1.0.0\n`);
    logger.error('this is a error message');
    logger.info('this is an info message');
    logger.warn('this is a warn message');
    logger.ready('this is a ready message');
    logger.debug('this is a debug message');
    logger.success('this is a success message');

    expect((console.log as jest.Mock).mock.calls).toMatchSnapshot();
  });

  test('should create new logger with warn level correctly', () => {
    console.log = jest.fn();

    const logger = createLogger({
      level: 'warn',
    });

    logger.greet(`😊 Rslog v1.0.0\n`);
    logger.error('this is a error message');
    logger.info('this is an info message');
    logger.warn('this is a warn message');
    logger.ready('this is a ready message');
    logger.debug('this is a debug message');
    logger.success('this is a success message');

    expect((console.log as jest.Mock).mock.calls).toMatchSnapshot();
  });

  test('should log error with stack correctly', () => {
    console.log = jest.fn();

    logger.error(new Error('this is an error message'));

    expect((console.log as jest.Mock).mock.calls[0][0]).toMatchSnapshot();
  });
});
